<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserPreferences">

    <TextView
            android:id="@+id/enterGateNumberLabel"
            android:text="@string/enter_gate_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:textAppearance="@style/App_editTextStyle"
            android:id="@+id/gate_number"
            android:textColor="@null"
            android:inputType="phone"
            android:layout_width="208dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterGateNumberLabel"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>

    <TextView
            android:id="@+id/enterSmsTextLabel"
            android:text="@string/enter_sms_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gate_number" />

    <EditText
            android:textAppearance="@style/App_editTextStyle"
            android:id="@+id/sms_text"
            android:textColor="@null"
            android:inputType="textShortMessage"
            android:layout_width="208dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterSmsTextLabel"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>

    <ImageButton
            android:id="@+id/btn_done"
            android:src="@drawable/ic_save"
            android:onClick="btnDoneClicked"
            android:contentDescription="@string/btn_done"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sms_text"
            android:layout_marginTop="60dp"/>

    <ImageButton
            android:id="@+id/btn_contacts"
            android:src="@drawable/ic_contacts"
            android:onClick="btnContactsClicked"
            android:contentDescription="@string/btn_contacts"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gate_number" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.046"/>

</android.support.constraint.ConstraintLayout>