<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrivateInfoActivity">

    <TextView
            android:id="@+id/nameLabel"
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.265" app:layout_constraintVertical_bias="0.054"/>
    <TextView
            android:id="@+id/surnameLabel"
            android:text="@string/surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.265" app:layout_constraintVertical_bias="0.137"/>
    <TextView
            android:id="@+id/cityLabel"
            android:text="@string/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.265" app:layout_constraintVertical_bias="0.219"/>

    <TextView
            android:id="@+id/phoneLabel"
            android:text="@string/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.265" app:layout_constraintVertical_bias="0.291"/>
    <TextView
            android:id="@+id/emailLabel"
            android:text="@string/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.265" app:layout_constraintVertical_bias="0.369"/>
    <TextView
            android:id="@+id/clientLabel"
            android:text="@string/client_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.238" app:layout_constraintVertical_bias="0.477"/>
    <TextView
            android:id="@+id/businessLabel"
            android:text="@string/business_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/name"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.276" app:layout_constraintVertical_bias="0.558"/>
    <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.034"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <EditText
            android:id="@+id/surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.123"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.204"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.283"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>
    <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.364"
            android:importantForAutofill="no"
            tools:targetApi="o"
            tools:ignore="LabelFor"/>

    <Spinner
            android:id="@+id/clients_spinner"
            android:entries="@array/client_arrays"
            android:layout_width="214dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.806" app:layout_constraintVertical_bias="0.073"/>
    <Spinner
            android:id="@+id/business_spinner"
            android:entries="@array/business_arrays"
            android:layout_width="214dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.801" app:layout_constraintVertical_bias="0.215"/>
    <ImageButton
            android:id="@+id/btn_done"
            android:src="@drawable/ic_save"
            android:onClick="btnDoneClicked"
            android:contentDescription="@string/btn_done"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/business_spinner" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.163"/>

</android.support.constraint.ConstraintLayout>